Сверстаны главный экран и спецпредложения

--- a/app/index.pug
+++ b/app/index.pug
@@ -4,4 +4,7 @@ html(lang="ru-RU")
     include pug/head
     body
         include pug/header/header
-        include pug/footer
+        include pug/main
+        include pug/special
+        include pug/footer/footer
+        include pug/style_and_scripts
