--- a/app/pug/footer/part_1.pug
+++ b/app/pug/footer/part_1.pug
@@ -1,2 +1,17 @@
 .upper_footer
     .container
+       .left
+           form(action="#" method="POST" class="subscribe")
+               input(type="text" placeholder="Подписаться на новости")
+               input(type="image" src="img/Arrow_icon.png")
+       .right
+           a(href="#")(class="soc_buttons")
+            i.fa.fa-facebook(aria-hidden="true")
+           a(href="#")(class="soc_buttons")
+            i.fa.fa-vk(aria-hidden="true")
+           a(href="#")(class="soc_buttons")
+            i.fa.fa-odnoklassniki(aria-hidden="true")
+           a(href="#")(class="soc_buttons")
+            i.fa.fa-instagram(aria-hidden="true")
+           a(href="#")(class="soc_buttons")
+            i.fa.fa-twitter(aria-hidden="true")
