--- a/app/pug/footer/part_2.pug
+++ b/app/pug/footer/part_2.pug
@@ -1,2 +1,17 @@
 .lower_footer
     .container
+        .left
+            p Все права защищены &copy; Fooseshoes 2017
+        .right
+            nav.footer_menu
+                ul
+                    li
+                        a(href="#") Главная
+                    li
+                        a(href="#") Поддержка
+                    li
+                        a(href="#") Политика
+                    li
+                        a(href="#") Faq
+                    li
+                        a(href="#") Контакты
