--- a/app/styl/header.styl
+++ b/app/styl/header.styl
@@ -17,7 +17,13 @@
         border 0
         background-color dark
         border-bottom 1px solid #999
-        color #fff
+        color white
+        transition all .4s ease
+        padding 2px 5px
+        &:focus
+            background-color rgba(white, 0.3)
+            transition all .4s ease
+            border-bottom 0
 
 .login
     display inline-block
@@ -32,7 +38,7 @@
 .lower_header
     display block
     height 60px
-    background-color #fff
+    background-color white
     overflow hidden
 
 .menu
@@ -77,7 +83,7 @@
 .like_number
 .cart_number
     background-color #aeaeae
-    color #fff
+    color white
     font-size 12px
     border-radius 3px
     padding 3px
