--- a/app/styl/styles.styl
+++ b/app/styl/styles.styl
@@ -2,6 +2,8 @@ green = #00C6A0
 grey = #747474
 dark = #1F1F1F
 pink = #EDE8DF
+white = #fff
+lightGrey = #2a2a2a
 
 
 *
@@ -39,3 +41,4 @@ li
 @import 'header'
 @import 'main'
 @import 'special'
+@import 'footer'
