--- a/app/index.pug
+++ b/app/index.pug
@@ -6,5 +6,6 @@ html(lang="ru-RU")
         include pug/header/header
         include pug/main
         include pug/special
+        include pug/store
         include pug/footer/footer
         include pug/style_and_scripts
