--- a/app/styl/styles.styl
+++ b/app/styl/styles.styl
@@ -4,6 +4,8 @@ dark = #1F1F1F
 pink = #EDE8DF
 white = #fff
 lightGrey = #2a2a2a
+black = #000
+greyText = #242424
 
 
 *
@@ -41,4 +43,5 @@ li
 @import 'header'
 @import 'main'
 @import 'special'
+@import 'store'
 @import 'footer'
