Добавлена кнопка на все категории

--- a/app/pug/store.pug
+++ b/app/pug/store.pug
@@ -1,6 +1,10 @@
 section.store
     .container
-        h3 Наши новинки
+        .left
+            h3 Наши новинки
+        .right
+            a(href="#")(class="categories") Все категории
+        .clf
         .row
             .col3
                 a(href="#")
@@ -47,6 +51,11 @@ section.store
                         i.fa.fa-external-link
                     a(href="#")
                         i.fa.fa-shopping-cart
+        .left
+            h3 Хиты продаж
+        .right
+            a(href="#")(class="categories") Все категории
+        .clf
         .row
             .col3
                 a(href="#")
@@ -94,21 +103,21 @@ section.store
                     a(href="#")
                         i.fa.fa-shopping-cart
         hr#hr
-        .row
+        .row_lower
             .col2
                 h4 Отзывы
                 p Vel, vulputate vel nibh. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec erat sem, vehicula id dictum sit
                 cite Маша Иванова
             .col2
                 h4 Новости
-                .row
+                .row_lower
                     a(href="#")
                         .date Апр
                             br/ 01
                         .news_text
                             h5 Nice & clean. The best for you blog!
                             p Vivamus metus turpis, bibendum vitae euismod vel, vulputate vel nibh
-                .row
+                .row_lower
                     a(href="#")
                         .date Апр
                             br/ 01
