--- a/app/pug/style_and_scripts.pug
+++ b/app/pug/style_and_scripts.pug
@@ -1,3 +1,4 @@
+link(href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet")
 link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
 link(rel="stylesheet", href="css/styles.css")
 script(src="js/scripts.js")
