--- a/app/styl/store.styl
+++ b/app/styl/store.styl
@@ -6,12 +6,27 @@
         line-height 60px
         font-weight normal
         color greyText
+        margin-top 20px
+
+.categories
+    display block
+    font-size 14px
+    line-height 25px
+    color #bcb5a7
+    border 1px solid #bcb5a7
+    width 100px
+    height 30px
+    text-align center
+    margin-top 25px
+
 .row
-    margin-bottom 20px
+.row_lower
     overflow hidden
     a
         color greyText
-
+.row_lower
+    margin-bottom 20px
+    
 .col3
     width 300px
     float left
