--- a/app/styl/styles.styl
+++ b/app/styl/styles.styl
@@ -15,7 +15,7 @@ greyText = #242424
     outline none
 
 body
-    font-family: Arial, Helvetica, sans-serif
+    font-family 'Roboto Condensed', sans-serif
 
 a
     text-decoration none
